Replace horusec github action marketplace with horusec bash

--- a/.github/workflows/horusec-analysis.yml
+++ b/.github/workflows/horusec-analysis.yml
@@ -7,6 +7,6 @@ jobs:
     steps:
       - name: Run Horusec
         id: run_horusec
-        uses: fike/horusec-action@v0.1
-        with:
-          arguments: -p="./" --ignore="**/.vscode/**, **/*.env, **/.mypy_cache/**, **/tests/**"
+        run: |
+                curl -fsSL https://raw.githubusercontent.com/ZupIT/horusec/master/deployments/scripts/install.sh | bash -s latest
+                horusec scan -p ./
