Replace horusec github action marketplace with horusec bash

--- a/.github/workflows/horusec-analysis.yml
+++ b/.github/workflows/horusec-analysis.yml
@@ -9,4 +9,4 @@ jobs:
         id: run_horusec
         run: |
                 curl -fsSL https://raw.githubusercontent.com/ZupIT/horusec/master/deployments/scripts/install.sh | bash -s latest
-                horusec scan -p ./
+                horusec start -p ./
